gccida/c0/record_alias_subset
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_alias_subset/src/alias.c:1076:1: error: unknown type name 'alias_set_entry_0'; did you mean 'alias_set_entry'?
alias_set_entry_0 subset_entry; // [rsp+0h] [rbp-20h] 
^~~~~~~~~~~~~~~~~
alias_set_entry
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_alias_subset/src/alias.c:87:4: note: 'alias_set_entry' declared here
} *alias_set_entry;
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_alias_subset/src/alias.c:1077:1: error: unknown type name 'alias_set_entry_0'; did you mean 'alias_set_entry'?
alias_set_entry_0 superset_entry; // [rsp+8h] [rbp-18h] 
^~~~~~~~~~~~~~~~~
alias_set_entry
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_alias_subset/src/alias.c:87:4: note: 'alias_set_entry' declared here
} *alias_set_entry;
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_alias_subset/src/alias.c:1086:20: error: use of undeclared identifier 'alias_set_entry_0'
superset_entry = ( alias_set_entry_0)xmalloc( 0x18uLL); 
                   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_alias_subset/src/obj/alias.o] Error 1
